# generic-new

./: .gitignore  Cargo.toml  README.md
examples/: example.rs
src/: attributes.rs  config.rs  field.rs  lib.rs
trybuild/: custom_field.rs  pathbuf_field.rs  string_field.rs  usize_field.rs  vec_field.rs
trybuild/fail/: double_ignore.rs  double_ignore.stderr  double_ty.rs  double_ty.stderr  empty_attr.rs  empty_attr.stderr  ignore_and_convert.rs  ignore_and_convert.stderr
trybuild/pass/: vec_pathbuf_field.rs  vec_string_field.rs
