[package]
name = "generic-new"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.5.0"
log = "0.4.16"
paste = "1.0.6"
pretty_env_logger = "0.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.16"
syn = { version = "1.0.89", features = ["extra-traits"] }
