[package]
name = "generic-new"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.5.0"
derive-syn-parse = "0.1.5"
log = "0.4.16"
paste = "1.0.6"
pretty_env_logger = "0.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.16"
single = "1.0.0"
smart-default = "0.6.0"
syn = { version = "1.0.89", features = ["full", "extra-traits"] }

[dev-dependencies]
anyhow = "1.0.56"
derive_more = "0.99.17"
trybuild = "1.0.58"

[features]
