[package]
name = "generic-new"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/aatifsyed/generic-new"
documentation = "https://docs.rs/generic-new"
license = "MIT"
description = "A derive macro which generates an ergonomic constructor with shortcuts for certain types."

[lib]
proc-macro = true
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-syn-parse = "0.1.5"
log = "0.4.16"
pretty_env_logger = "0.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.16"
single = "1.0.0"
syn = { version = "1.0.89", features = ["full", "extra-traits"] }

[dev-dependencies]
anyhow = "1.0.56"
derive_more = "0.99.17"
trybuild = "1.0.58"

[features]
